# openweather-api

./: .coveragerc  .gitignore  .travis.yml  README.md  pyproject.toml  pytest.ini  setup.py  test.sh
.github/workflows/: publish.yml  python-publish.yml  test.yml
openweather_api/: __init__.py  client.py  core.py  settings.py  utils.py
requirements/: base.txt  packaging.txt
tests/: test_utils.py
